Fix research guide text wrap issue

--- a/css/sass/_rebrand.scss
+++ b/css/sass/_rebrand.scss
@@ -820,3 +820,11 @@ a {
     min-width: 320px !important;
   }
 }
+
+#research-guide-content {
+  p {
+    a {
+      display: inline !important;
+    }
+  }
+}
